# Training-Task-3-Frappe-Framework

./: README.md  pyproject.toml
task_app/: hooks.py  modules.txt
task_app/APIs/: chart.py  custom_api.py  database.py  dialog.py  document.py
task_app/first_module/dashboard_chart/chart_3/: chart_3.json
task_app/first_module/dashboard_chart/chart__two/: chart__two.json
task_app/first_module/dashboard_chart/chart_five/: chart_five.json
task_app/first_module/dashboard_chart/chart_four/: chart_four.json
task_app/first_module/dashboard_chart/chart_one/: chart_one.json
task_app/first_module/dashboard_chart/chart_six/: chart_six.json
task_app/first_module/doctype/article/: article.js  article.json  article.py  test_article.py
task_app/first_module/doctype/articles/: articles.js  articles.json  articles.py  test_articles.py
task_app/first_module/doctype/asset_access_request/: asset_access_request.js  asset_access_request.json  asset_access_request.py  test_asset_access_request.py
task_app/first_module/doctype/authors/: authors.js  authors.json  authors.py  test_authors.py
task_app/first_module/doctype/chart_doctype/: chart_doctype.js  chart_doctype.json  chart_doctype.py  test_chart_doctype.py
task_app/first_module/doctype/child_doctype/: child_doctype.json  child_doctype.py
task_app/first_module/doctype/client_side_scripting/: client_side_scripting.js  client_side_scripting.json  client_side_scripting.py  test_client_side_scripting.py
task_app/first_module/doctype/person/: person.js  (+3 more)
task_app/public/js/: demo.js
task_app/www/: users.html  users.py
(+91 files in other folders)
